<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="143dp"
        android:layout_height="67dp"
        android:layout_marginBottom="24dp"
        android:onClick="weatherAPI"
        android:text="@string/cityButton"
        android:textAllCaps="false"
        android:textColor="@color/niceWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editCityName"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@color/niceWhite"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tampere"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="283dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:text="@string/weather_app"
        android:textAlignment="center"
        android:textColor="@color/niceWhite"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCity"
        android:layout_width="362dp"
        android:layout_height="89dp"
        android:layout_marginTop="24dp"
        android:text="@string/city_tampere"
        android:textAlignment="center"
        android:textColor="@color/niceWhite"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temp_0_c"
        android:textAlignment="center"
        android:textColor="@color/niceWhite"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCity" />

    <TextView
        android:id="@+id/textWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wind_0_m_s"
        android:textAlignment="center"
        android:textColor="@color/niceWhite"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTemp" />

    <ImageView
        android:id="@+id/imageW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWind"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>